--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar de Freitas" class="rounded-circle" width="150" height="150"
+        <img src="img/kleberianus.jpg" alt="avatar de Freitas" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Freitas_</p>
         <h1>Eu ensino Programação</h1>
